[project]
name = "webp-convertor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "mypy>=1.14.1",
    "pillow>=11.1.0",
    "pyinstaller>=6.11.1",
    "pylint>=3.3.3",
    "rich>=13.9.4",
    "ruff>=0.8.6",
    "tqdm>=4.67.1",
]
